--- a/src/main/webapp/views/share.html
+++ b/src/main/webapp/views/share.html
@@ -6,7 +6,7 @@
         Here is the link to share the poll with all your friends:
     </div>
     <div class="row">
-        <div class="col-md-6 col-md-offset-2">xx
+        <div class="col-md-6 col-md-offset-2">
             <input type="text" readonly class="form-control" ng-model="pollUrl"/>
         </div>
     </div>
