--- a/src/main/webapp/views/footer.html
+++ b/src/main/webapp/views/footer.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="container-fluid">
+    <div style="height: 60px; float: right;">
+        <img src="images/mimacom.jpg" width="150"/>
+    </div>
+</div>
