--- a/src/main/webapp/views/welcome.html
+++ b/src/main/webapp/views/welcome.html
@@ -2,7 +2,7 @@
     <h1>Welcome to Polls!</h1>
     <br/>
 
-    <p>
+    <p style="text-align: justify;">
         With <b>Polls</b> you will finally solve all your organization problems with your friends. Is it impossible
         to plan a trip with your friends because you are unable to find the unique weekend all of you are free? Find
         out how to solve this problem, in 3 clicks!
