--- a/src/main/webapp/views/options.html
+++ b/src/main/webapp/views/options.html
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-        <button type="button" class="btn poll-btn btn-md btn-right" ng-click="saveOptions()">Continue...</button>
+        <button type="button" class="btn poll-btn btn-md btn-right" ng-click="saveOptions()" ng-disabled="enableNext()">Continue...</button>
     </form>
 
 </div>
