Improvements: clean code and bug fixes

--- a/src/main/webapp/views/footer.html
+++ b/src/main/webapp/views/footer.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div style="height: 60px; float: right;">
+    <div style="float: right; padding-bottom: 20px;">
         <img src="images/mimacom.jpg" width="150"/>
     </div>
 </div>
